issue with fitted params still tracer values

--- a/examples/fit_gmm.ipynb
+++ b/examples/fit_gmm.ipynb
@@ -47,7 +47,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Basic model fitting"
+    "## Generate data from a model"
    ]
   },
   {
@@ -152,6 +152,51 @@
     "                                       n_std=[1,2,3], edgecolor='k', facecolor=c, alpha=alpha)\n",
     "plt.gca().set_aspect('equal')\n",
     "plt.title(f'Data-generating GMM and samples (n={n_samples})')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Now, let's create a randomly initialized GMM and fit it to the day"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "seed, seed_init = jr.split(seed)\n",
+    "test_gmm = GaussianMixtureModel.initialize_random(seed, true_n_mixtures, component_dim)\n",
+    "\n",
+    "lps = test_gmm.fit_em(samples, n_iters=100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plot test GMM (3 std of ellipses) and observed samples (scatter) by mixture.\n",
+    "# Saturation of test GMM ellipse is indicative of its mixing probability\n",
+    "\n",
+    "test_means = onp.asarray(test_gmm._component_means.value)\n",
+    "test_covs = onp.asarray(test_gmm._component_covariances.value)\n",
+    "test_probs = onp.asarray(test_gmm._mixing_probs.value)\n",
+    "\n",
+    "for m, samples_m in enumerate(samples_by_mixture):\n",
+    "    c = categorical_cmap(m)\n",
+    "    \n",
+    "    plt.scatter(samples_m[:,0], samples_m[:,1], s=12, color=c)\n",
+    "\n",
+    "    # Plot test GMM\n",
+    "    alpha = onp.maximum(test_probs[m], 0.05)\n",
+    "    draw_confidence_ellipse(test_means[m], test_covs[m], ax=plt.gca(),\n",
+    "                            n_std=[1,2,3], edgecolor='k', facecolor=c, alpha=alpha)\n",
+    "plt.gca().set_aspect('equal')\n",
+    "plt.title(f'GMM fitten to data samples (n={n_samples}, n_iters={len(lps)})')"
    ]
   }
  ],
